infra/traefik/forward-auth/networkpolicies/forward-auth.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: forward-auth
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      app: forward-auth
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik
            app.kubernetes.io/name: traefik
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "4181"
  egress:
    - toServices:
        - k8sService:
            serviceName: traefik
            namespace: traefik
      toPorts:
        - ports:
            - port: "8443"  # to access load balancer (https://sso.${BASE_DOMAIN})
    - toFQDNs:
        - matchName: sso.${BASE_DOMAIN}
      toPorts:
        - ports:
            - port: "443"  # to access load balancer (https://sso.${BASE_DOMAIN})
              protocol: "TCP"
