infra/traefik/forward-auth/networkpolicies/traefik-egress-forward-auth.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-egress-forward-auth
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: traefik
      app.kubernetes.io/name: traefik
  egress:
    - toServices:
        - k8sService:
            serviceName: forward-auth
            namespace: traefik
      toPorts:
        - ports:
            - port: "4181"
              protocol: TCP
